[tool.poetry]
name = "kappa_one"
version = "0.0.1"
description = "Interface for the KappaOne Analysis Ready Data"
authors = ["Indrek Sünter <indrek.sunter@kappazeta.ee>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
OWSLib = "^0.25.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
